--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Banner -->
   <nav class="box box-full box-vertical">
     <div class="banner">
-      <div class="box box-small" style="padding-left: 2em;">
+      <div class="box" style="padding-left: 2em;">
         <h4>
           <a href="#"><i class="fa-solid fa-house fa-xl"></i></a>
         </h4>
@@ -44,10 +44,8 @@
   <!-- Intro -->
   <div class="box box-full">
     <!-- Box to hold text. Looks better when it isn't one line each, so cap it out at 957px -->
-    <div class="box box-vertical" style="max-width: 957px;">
-      <div class="intro">
-        <h1>Jean's Recipe Book</h1>
-      </div>
+    <div class="box box-vertical intro" style="max-width: 957px;">
+      <h1>Jean's Recipe Book</h1>
       <p>
         Welcome to Jean's recipe book! A website inspired by the binder my mom kept
         of recipes our family loved. This website is a tribute to her and everything she contributed
