--- a/index.html
+++ b/index.html
@@ -1,89 +1,84 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>Jean's Recipe Book</title>
 
-<head>
-  <title>Jean's Recipe Book</title>
+        <!-- Internal stylesheets -->
+        <link href="styles/index.css" rel="stylesheet">
+        <!-- External refs -->
+        <script src="https://kit.fontawesome.com/c7ff23f1ca.js" crossorigin="anonymous"></script>
+        <link href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Dosis&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <header id="header">
+            <div id="header-bar">
+                <h1>Jeffrey Carr</h1>
+            </div>
+            <div id="links-bar">
+                <a href="#home"><i class="fa-solid fa-house"></i></a>
+                <a href="#apps"><i class="fa-solid fa-cubes-stacked"></i></a>
+            </div>
+        </header>
+        <section id="intro">
+            <h1>Jean's Recipe Book</h1>
+            <p>
+                Welcome to Jean's recipe book! My mom kept a binder of every recipe she found online that our family loved.
+                This website is a tribute to her and an attempt to keep her memory alive for the rest of time. Love you mom.
+            </p>
+        </section>
+        <main id="main-content-area">
+            <!-- Sidebar -->
+            <section id="sidebar">
+                <div id="sidebar-content">
+                    <div id="sidebar-header">
+                        <button id="profile-button" class="header-button" onclick="switchSidebar('profile')">
+                            <i class="fa-solid fa-user"></i>
+                        </button>
+                        <button id="search-button" class="header-button" onclick="switchSidebar('search')">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                        </button>
+                        <button id="favs-button" class="header-button" onclick="switchSidebar('favs')">
+                            <i class="fa-regular fa-heart"></i>
+                        </button>
+                        <button id="rand-button" class="header-button" onclick="switchSidebar('rand')">
+                            <i class="fa-solid fa-dice"></i>
+                        </button>
+                    </div>
+                    <div id="sidebar-body">
+                        <!-- PROFILE BODY-->
+                        <div id="profile-body" class="sidebar-item">
+                            <h2>Hello, User</h2>
+                            <button class="standard-button">Sign in with Google</button>
+                        </div>
+                        <!-- SEARCH BODY -->
+                        <div id="search-body" class="sidebar-item">
+                            <h2>Search</h2>
+                            <input type="text" id="search-input" name="searchInput">
+                            <button id="search-button" class="standard-button" onclick="search()">Search</button>
+                            <button id="more-filters-button" onclick="addFilter()">More Filters</button>
+                            <div id="filter-display-area"></div>
+                        </div>
+                        <!-- FAVORITES BODY -->
+                        <div id="favs-body" class="sidebar-item">
+                            <h2>Favorites</h2>
+                        </div>
+                        <!-- RANDOM RECIPE BODY -->
+                        <div id="rand-body" class="sidebar-item">
+                            <h2>Random Recipe</h2>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- Recipes -->
+            <section id="recipes">
+                <div id="recipes-content">
+                    <h2>Recipes</h2>
+                </div>
+            </section>
 
-  <link rel="stylesheet" href="./styles/index.css" />
-  <link rel="stylesheet" href="./styles/animations.css" />
-  <!-- Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Dosis&display=swap" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/c7ff23f1ca.js" crossorigin="anonymous"></script>
-</head>
+            <div id="testing" style="height: 10000px"></div>
+        </main>
 
-<body onload="load();">
-  <!-- Banner -->
-  <nav class="box box-full box-vertical">
-    <div class="banner">
-      <div class="box" style="padding-left: 2em;">
-        <h4>
-          <a href="#"><i class="fa-solid fa-house fa-xl"></i></a>
-        </h4>
-      </div>
-      <div class="box box-vertical">
-        <div class="banner-title">Jeffrey Carr</div>
-      </div>
-      <div class="box" style="padding-right: 2em;">
-        <a onclick="toggleDropdown()" id="apps-dropdown">
-          <div class="box box-vertical" id="apps-dropdown">
-              <i class="fa-solid fa-cubes-stacked" id="apps-dropdown"></i>
-              <span id="apps-dropdown">Apps</span>
-          </div>
-        </a>
-        <div class="dropdown-content" id="apps-dropdown-container">
-          <a href="https://www.jeffreycarr.dev/">Main Site</a>
-          <a href="https://recipe.jeffreycarr.dev">Recipe Book</a>
-          <a href="https://bingo.jeffreycarr.dev">Bingo Creator</a>
-        </div>
-      </div>  
-    </div>
-  </nav>
-
-  <!-- Intro -->
-  <div class="box box-full">
-    <!-- Box to hold text. Looks better when it isn't one line each, so cap it out at 957px -->
-    <div class="box box-vertical intro">
-      <h1>Jean's Recipe Book</h1>
-      <p>
-        Welcome to Jean's recipe book! A website inspired by the binder my mom kept
-        of recipes our family loved. This website is a tribute to her and everything she contributed
-        to the Carr family.
-      </p>
-      <p>
-        This recipe was made to be easy to use and helpful for everyone. If you have any issues/suggestions,
-        please email me at <a href="mailto:jeffrey.carr98@gmail.com">jeffrey.carr98@gmail.com</a>
-      </p>
-    </div>
-  </div>
-
-  <!-- Main area. Has 3 columns: Filters | Recipes | Favorites -->
-  <div class="box box-full box-vertical box-nocenter">
-    <!-- Search bar and filters -->
-    <div class="box box-full">
-      <input type="text" />
-      <button class="btn">Search</button>
-    </div>
-
-    <!-- Recipes -->
-    <div class="box box-full box-vertical box-nocenter">
-      <div class="box box-full box-vertical" id="new-recipesContainer">
-        Loading Recipes...
-      </div>
-    </div>
-    <!-- Favorites -->
-    <!-- Idea: Two separate panels for favorites and menu. Make them collapsible and allow the menu to be printed -->
-    <!-- <div class="box box-small box-vertical pad-medium">
-      <h1>Favorites</h1>
-
-      <div class="box box-full" id="favoritesContainer">
-        Loading Favorites...
-      </div>
-    </div> -->
-  </div>
-
-  <script src="./js/index.js" type="text/javascript"></script>
-</body>
-
+        <script type="text/javascript" src="js/index.js"></script>
+    </body>
 </html>
