trying new things

--- a/recipe.html
+++ b/recipe.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>Viewing recipe</h1>
-    <button class="standard-button" onclick="window.location.replace('https://localhost:5500')">Back to main</button>
+    <button class="standard-button" onclick="window.location.replace('https://www.recipe-test.jeffreycarr.dev')">Back to main</button>
   </body>
 </html>
