--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Jean's Recipe Book</title>
 
         <!-- Internal stylesheets -->
+        <link href="styles/shared.css" rel="stylesheet">
         <link href="styles/index.css" rel="stylesheet">
         <!-- External refs -->
         <script src="https://kit.fontawesome.com/c7ff23f1ca.js" crossorigin="anonymous"></script>
