--- a/index.html
+++ b/index.html
@@ -14,17 +14,18 @@
         <header id="header">
             <div id="header-bar">
                 <h1>Jeffrey Carr</h1>
-            </div>
-            <div id="links-bar">
-                <a href="#home"><i class="fa-solid fa-house"></i></a>
-                <a href="#apps"><i class="fa-solid fa-cubes-stacked"></i></a>
+                <div id="header-links">
+                  <a href="https://www.jeffreycarr.dev">Main site</a>
+                  <a href="/">Recipes</a>
+                  <a href="https://www.bingo.jeffreycarr.dev">Bingo creator</a>
+                </div>
             </div>
         </header>
         <section id="intro">
             <h1>Jean's Recipe Book</h1>
             <p>
                 Welcome to Jean's recipe book! My mom kept a binder of every recipe she found online that our family loved.
-                This website is a tribute to her and an attempt to keep her memory alive for the rest of time. Love you mom.
+                This website is a tribute to her in an attempt to give everyone the opportunity to explore the recipes.
             </p>
         </section>
         <main id="main-content-area">
