--- a/recipe.html
+++ b/recipe.html
@@ -22,7 +22,7 @@
           </div>
       </div>
       <div id="return-bar">
-          <a href="/"><i class="fa-solid fa-arrow-left"></i> Back to recipes</a>
+          <a href="/" style="color: var(--font)"><i class="fa-solid fa-arrow-left"></i> Back to recipes</a>
       </div>
     </header>
 
