--- a/create.html
+++ b/create.html
@@ -48,7 +48,7 @@
         <h2>Recipe Ingredients</h2>
         <table id="ingredients-table">
           <tr>
-            <th>Ingredient Name</th>
+            <th>Ingredient Name*</th>
             <th>Amount</th>
             <th>Prep</th>
           </tr>
@@ -77,7 +77,7 @@
       <section id="submit">
         <h2>Finish Up</h2>
         <div id="buttons-container">
-          <button class="standard-button">Create Recipe</button>
+          <button class="standard-button" onclick="submitRecipe()">Create Recipe</button>
           <button class="secondary-button">Cancel</button>
         </div>
       </section>
