--- a/recipe.html
+++ b/recipe.html
@@ -79,6 +79,6 @@
     <div id="video-container"></div>
 
     <script type="text/javascript" src="js/shared.js"></script>
-    <script type="text/javascript" src="./js/recipe.js"></script>
+    <script type="text/javascript" src="js/recipe.js"></script>
   </body>
 </html>
