--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
   </head>
   <body onload="verifyLogin()">
     <h1>Verifying your login request...</h1>
-    <button class="standard-button" onclick="window.location.replace('https://localhost:5500')">Back to home</button>
+    <button class="standard-button" onclick="window.location.replace('https://www.recipe.jeffreycarr.dev')">Back to home</button>
 
     <script type="text/javascript">
       async function verifyLogin() {
@@ -28,13 +28,13 @@
         let scope = urlParams.get('scope');
 
         // Send response to server
-        let data = await fetch(`https://localhost:5001/auth/google/verify_login?csrf=${csrf}&code=${code}&scope=${scope}`, {credentials: 'include'});
+        let data = await fetch(`https://recipe-book-backend-v2-yal6zyrksa-uc.a.run.app/auth/google/verify_login?csrf=${csrf}&code=${code}&scope=${scope}`, {credentials: 'include'});
         let jsonData = JSON.parse(await data.text());
 
         if(jsonData['status'] == "success") {
-          window.location.replace('https://localhost:5500/');
+          window.location.replace('https://www.recipe.jeffreycarr.dev/');
         } else {
-          window.location.replace('https://localhost:5500/?login_error=true');
+          window.location.replace('https://www.recipe.jeffreycarr.dev/?error=Error+logging+in');
         }
       }
     </script>
