Giving up on image for right now

--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
         </header>
         <section id="intro">
             <div id="triangle-topleft"></div>
-            <div id="intro-image">
+            <!-- Img doesn't work on cloudflare right now -->
+            <!-- <div id="intro-image">
                 <img src="./images/mom.jpg" />
-            </div>
-            <div id="intro-text">
+            </div> -->
+            <div id="intro-text" style="padding-bottom: 50px">
                 <h1>Jean's Recipe Book</h1>
                 <p>
                     Welcome to Jean's recipe book! My mom kept a binder of every recipe she found online that our family loved.
